--- a/estilo/style.css
+++ b/estilo/style.css
@@ -36,7 +36,7 @@ iframe#tela{
     position: relative;
     top: 80px;
     left: 23px;
-    width: 269px;
+    width: 267px;
     height: 471px;
     background-size: cover;
 }
@@ -58,4 +58,8 @@ section#redes-sociais img:hover{
     transform: translate(-3px,-3px) ;
     transition: 0.5s ,border 1s;
     
+}
+section#redes-sociais img{
+    
+
 }
